@@ -2327,3 +2327,8 @@ Sun, 02 Mar 2008 11:50:48 +0100
 
 	- Fixed bug that caused arrays of varchar to be output with incomplete
 	  name.
+
+Thu, 20 Mar 2008 16:54:27 +0100
+
+	- Changed statement escaping to not escape continuation line markers.
+
